# python-template

./: .env  .gitignore  .pre-commit-config.yaml  .prettierrc  LICENSE  README.md  config.xlaunch  poetry.toml  pyproject.toml  pyrightconfig.json  taplo.toml
.config/: formatter.toml  poe.toml  pylint.toml
.config/scripts/: poetry_update_all.sh
docs/: poethepoet.md  poetry_installation.md  remote_configuration.md
src/: conftest.py
